# llm-cicd-pipeline

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: golden_dataset.json
reports/: README.md
scripts/: benchmark.py  drift_detection.py  export_report.py  run_eval.py  setup_check.py  synthesize_dataset.py  tune_thresholds.py  validate_kb.py
src/: app.py  metrics.py  mock_rag.py  synthesizer.py
tests/: conftest.py  test_contextual.py  test_custom_metrics.py  test_faithfulness.py  test_golden_dataset.py  test_integration.py  test_rag.py  test_relevancy.py  test_safety.py
